Reader: Fix comment box alignment

--- a/client/blocks/comments/style.scss
+++ b/client/blocks/comments/style.scss
@@ -20,13 +20,13 @@
 // Add a New Comment Form
 .comments__form {
 	position: relative;
-	padding: 0 0 0 48px;
+	padding: 0 0 0 42px;
 	margin-top: 24px;
 
 	.gravatar {
 		position: absolute;
 			top: 0;
-			left: 8px;
+			left: 0;
 		border-radius: 48px;
 	}
 
